summative.moria.Moria.scala.error
Compilation error:
Moria:29: error: not found: value Direction
setDirection(Direction.EAST);
             ^