summative.moria.Moria.scala.code
def getThaRock():Boolean = {
  while(!isOverBaggle && !isFacingWall){
    forward();
  }
  if(isOverBaggle){
    pickupBaggle();
    back();
    while(!isOverBaggle && !isFacingWall){
      forward();
    }
    back();
    forward();
    dropBaggle();
    forward();
    return true;
  } else {
    getOutAlive()
    return false;
  }
  
  
}
def getOutAlive(){
  right();
  forward();
  left();
  forward();
}
setDirection(Direction.EAST);
while(getThaRock()){}